add game settings